--- a/server/src/public/index.html
+++ b/server/src/public/index.html
@@ -48,7 +48,7 @@
 
         function verVideo(video,context){
             context.drawImage(video,0,0, context.width, context.height);
-            socket.emit('stream', 'algo');
+            socket.emit('stream', canva.toDataURL('image/webp'));
         }
 
         btn.addEventListener('click',()=>{
